--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@ weight: 1
 {% include header.html %}
 <!-- This is top index -->
 <div class="container">
-    Read the main page <a href="{{ site.baseurl }}/articles">here</a>
+    <ul>
+        <li><a href="{{ site.baseurl }}/articles">Full articles list</a></li>
+
+    </ul>
+    
 </div>
 
 <!-- This is top index -->
