--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ weight: 1
 
 {% include header.html %}
 <!-- This is top index -->
+
 <div class="container">
     <ul>
-        <li><a href="{{ site.baseurl }}/articles">Full articles list</a></li>
-
+        <li><a href="{{ site.baseurl }}/articles">The "GitHub Pages" full articles list</a></li>
+        <li><a href="https://github.com/technet2/Wiki">The Wiki repository</a></li>
+        <li><a href="https://github.com/technet2/Wiki/wiki">The Wiki wiki</a></li>
     </ul>
     
 </div>
