--- a/blogs/index.html
+++ b/blogs/index.html
@@ -11,6 +11,7 @@ weight: 3
 <p>The project is an unofficial copy of content that has been taken offline.</p>
 <p>The content is taken unchanged, fully credited to the author, and is a collaboration between Microsoft MVPs and TechNet/MSDN/Docs teams of Microsoft.</p>
 
-<a href="{{ "/blogs/forumninjas/index.html" | prepend: site.baseurl }}">TechNet Forum Ninjas Blog</a>
-<a href="{{ "/blogs/windowsazurestorage/index.html" | prepend: site.baseurl }}">Windows Azure Storage</a>
-
+<ul>
+    <li><a href="/Wiki/blogs/forumninjas/index.html">TechNet Forum Ninjas Blog</a></li>
+    <li><a href="/Wiki/blogs/windowsazurestorage/index.html">Windows Azure Storage</a></li>
+</ul>
