--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ weight: 1
         <li><a href="{{ site.baseurl }}/articles">The "GitHub Pages" full articles list</a></li>
         <li><a href="https://github.com/technet2/Wiki">The Wiki repository</a></li>
         <li><a href="https://github.com/technet2/Wiki/wiki">The Wiki wiki</a></li>
+        <li><a href="https://github.com/technet2/Wiki/blogs/">Salvaged Blogs</a></li>
     </ul>
     
 </div>
